--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
   - name: servidorEddy
     plan: free
-    databaseName: dbbCineUTC
+    databaseName: dbbcineutc
     user: eddy
 
 services:
@@ -23,4 +23,5 @@ services:
 
 
 
-# set DATABASE_URL=postgresql://david:RkBAp8ZZaE98t5OiwtpfNnJmI0URw2K9@dpg-cqjettqj1k6c739rc1e0-a.oregon-postgres.render.com/dbcine
+
+# set DATABASE_URL=postgresql://eddy:u4pPsWjT0sMmXPO8BmEG3zCN1d0O9Wv0@dpg-cqlpkubv2p9s73bg2cag-a.oregon-postgres.render.com/dbbcineutc
